--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
 .dark {
 	--url: url("./assets/images/nnnoise-2.svg");
-	--text-color: #FFFF;
+	--text-color: #ffed76;
 	--text-color-alt: #BF40BF;
 	--ques-text: #c0b2f8;
 	--border-color: #c0b2f8;
